# LinuxCTR

./: README.md
app/: CMakeLists.txt  clean  main.cpp  ninja  reload  run
app/include/: gui.h  guiTypes.h
app/src/: gui.cpp
